--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -257,7 +257,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Name</string>
+     <string>Inventory</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
