Add submit button and create slot

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -340,6 +340,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="dbSubmitButton">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>260</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Submit</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
