Switch to QListWidget

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -55,16 +55,6 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QListWidget" name="InventoryList">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>120</y>
-      <width>391</width>
-      <height>371</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
@@ -351,6 +341,16 @@
     </property>
     <property name="text">
      <string>Submit</string>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="inventoryList">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>120</y>
+      <width>391</width>
+      <height>371</height>
+     </rect>
     </property>
    </widget>
   </widget>
