Move window elements and reduce height

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -6,73 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1053</width>
-    <height>537</height>
+    <width>1050</width>
+    <height>511</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QComboBox" name="ViewCategoryComboBox">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>50</y>
-      <width>211</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="currentText">
-     <string>All</string>
-    </property>
-    <property name="maxVisibleItems">
-     <number>29</number>
-    </property>
-    <property name="placeholderText">
-     <string>All</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="ViewCategoryLabel">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>30</y>
-      <width>211</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial</family>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>View Category</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="Line" name="line">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>80</y>
-      <width>781</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="ItemName">
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>120</y>
+      <y>80</y>
       <width>371</width>
       <height>20</height>
      </rect>
@@ -82,7 +28,7 @@
     <property name="geometry">
      <rect>
       <x>620</x>
-      <y>100</y>
+      <y>60</y>
       <width>10</width>
       <height>401</height>
      </rect>
@@ -95,7 +41,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>100</y>
+      <y>60</y>
       <width>371</width>
       <height>20</height>
      </rect>
@@ -117,7 +63,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>150</y>
+      <y>110</y>
       <width>191</width>
       <height>20</height>
      </rect>
@@ -139,7 +85,7 @@
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>170</y>
+      <y>130</y>
       <width>171</width>
       <height>22</height>
      </rect>
@@ -149,7 +95,7 @@
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>150</y>
+      <y>110</y>
       <width>171</width>
       <height>20</height>
      </rect>
@@ -171,7 +117,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>290</y>
+      <y>240</y>
       <width>371</width>
       <height>211</height>
      </rect>
@@ -181,7 +127,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>270</y>
+      <y>220</y>
       <width>371</width>
       <height>20</height>
      </rect>
@@ -203,7 +149,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>200</y>
+      <y>160</y>
       <width>191</width>
       <height>20</height>
      </rect>
@@ -225,7 +171,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>220</y>
+      <y>180</y>
       <width>191</width>
       <height>20</height>
      </rect>
@@ -235,7 +181,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>100</y>
+      <y>50</y>
       <width>591</width>
       <height>20</height>
      </rect>
@@ -257,7 +203,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>170</y>
+      <y>130</y>
       <width>191</width>
       <height>22</height>
      </rect>
@@ -276,7 +222,7 @@
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>220</y>
+      <y>180</y>
       <width>121</width>
       <height>20</height>
      </rect>
@@ -289,7 +235,7 @@
     <property name="geometry">
      <rect>
       <x>780</x>
-      <y>260</y>
+      <y>220</y>
       <width>118</width>
       <height>3</height>
      </rect>
@@ -302,7 +248,7 @@
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>200</y>
+      <y>160</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -324,7 +270,7 @@
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>220</y>
+      <y>180</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -333,8 +279,8 @@
    <widget class="QPushButton" name="dbSubmitButton">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>260</y>
+      <x>950</x>
+      <y>460</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -347,9 +293,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>120</y>
+      <y>80</y>
       <width>591</width>
-      <height>381</height>
+      <height>371</height>
      </rect>
     </property>
     <property name="rowCount">
@@ -395,13 +341,55 @@
      </property>
     </column>
    </widget>
+   <widget class="QComboBox" name="ViewCategoryComboBox">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>460</y>
+      <width>211</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="currentText">
+     <string>View Category</string>
+    </property>
+    <property name="maxVisibleItems">
+     <number>29</number>
+    </property>
+    <property name="placeholderText">
+     <string>View Category</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>1031</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Ownly</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1053</width>
+     <width>1050</width>
      <height>21</height>
     </rect>
    </property>
