--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -456,6 +456,20 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>ItemName</tabstop>
+  <tabstop>ItemCategory</tabstop>
+  <tabstop>ItemPurchaseDate</tabstop>
+  <tabstop>ItemPurchasePrice</tabstop>
+  <tabstop>ItemCount</tabstop>
+  <tabstop>ItemUsedInLastSixMonths</tabstop>
+  <tabstop>ItemNotes</tabstop>
+  <tabstop>inventoryList</tabstop>
+  <tabstop>ViewCategoryComboBox</tabstop>
+  <tabstop>NewItemButton</tabstop>
+  <tabstop>dbSubmitButton</tabstop>
+  <tabstop>deleteItemButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
