--- a/src/ui_export_options.ui
+++ b/src/ui_export_options.ui
@@ -47,7 +47,7 @@
     <rect>
      <x>40</x>
      <y>20</y>
-     <width>331</width>
+     <width>271</width>
      <height>20</height>
     </rect>
    </property>
@@ -89,6 +89,19 @@
    </property>
    <property name="text">
     <string>Filter:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ExportBrowseButton">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>20</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Browse</string>
    </property>
   </widget>
  </widget>
