Add calendar popup

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -90,6 +90,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="ItemPurchaseDateLabel">
     <property name="geometry">
