Disable direct cell editing on table

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -301,6 +301,9 @@
       <height>371</height>
      </rect>
     </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
+    </property>
     <property name="rowCount">
      <number>0</number>
     </property>
