Add clear button dialog

--- a/src/ui_clear_warning.ui
+++ b/src/ui_clear_warning.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>ClearDialog</class>
+ <widget class="QDialog" name="ClearDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -76,7 +76,7 @@
   <connection>
    <sender>clearWarningButtons</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>ClearDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -92,7 +92,7 @@
   <connection>
    <sender>clearWarningButtons</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>ClearDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
